# iriuri

./: .gitignore  pyproject.toml  tox.ini
grammars/: rfc3986.abnf  rfc3987.abnf  rfc6874.abnf  rfc8141.abnf
iriuri/compat/: rfc3987.py
iriuri/re/: __init__.py  rfc3986.py
tests/: __init__.py  test_iriuri.py
tests/data/: in.yaml  iri-ref-tests.json  iri-tests.json  uri-ref-tests.json  uri-tests.json
tests/scripts/: gen-data.py
