[tool.poetry]
name = "iriuri"
version = "0.0.1"
description = "Fully RFC 3986/3987 URI and IRI parsing and manipulation"
authors = ["Henry H. Andrews, <handrews@modern-json-schema.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
abnf-to-regexp = "^1.1.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
rfc3987 = "^1.3.8"
abnf = "^2.2.0"
tox = "^4.14.1"
pytest = "^8.1.1"
coverage = "^7.4.4"
flake8 = "^7.0.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
